3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/skills.c: changed NDI_UNIQUE to NDI_BLACK for the meditation
   message (so that messages can correctly be grouped, also makes it
   coherent with praying).
Ryo 2003-12-20

Those fixes deal with gcc3.3 infinite loop.
Fixes (except sizeof/memset) courtesy Bernd Edler.
---
common/item.c: use right buffer size for safe_strcat.
common/object.c: clear active_next and active_prev when cleaning an object.
include/define.h: fixed *curlen=maxlen-1; instead of *curlen=maxlen=1;
socket/init.c: initialize whole ns->inbuf.buf, instead of setting first
   element only to 0. Also allocated with a sizeof( unsigned char ) * size,
   in case size changes one day. And initialize some more fields.
Ryo 2003-12-18


Those changes deal only with warning cleaning under Windows.
Mostly, using the right type at the right place, or doing explicit casts.
---
common/object.c: changed free_arr_[xy] to short[] instead of int[].
include/global.h: changed free_arr_[xy] to short[] instead of int[].
   Changed Windows-specific comments to C-style comments, not C++-style.
include/sockproto.h: play_sound_player_only takes sint8, not int, for
   coordinates. play_sound_map takes a short for the sound number.
socket/image.c: some type fixing, explicit casts.
socket/init.c: Windows-specific type fixing.
socket/lowlevel.c: explicit casts to char for SockList_AddInt64
socket/request.c: fixed types to match function parameters, or added
   explicit casts when needed.
socket/sound.c: play_sound_player_only takes sint8, not int, for
   coordinates. play_sound_map takes a short for the sound number.
Ryo 2003-12-14
